@@ -1,3 +1,9 @@
+2 January 2017: Wouter
+	- Fix that DS queries with referral replies are answered straight
+	  away, without a repeat query picking the DS from cache.
+	  The correct reply should have been an answer, the reply is fixed
+	  by the scrubber to have the answer in the answer section.
+
 15 December 2017: Wouter
 	- Fix timestamp failure because of clang optimizer failure, by
 	  disabling -O2 when the compiler --version is clang.
